--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
             <div class="hero__content">
                 <h1 class="hero-title">Hygienepapier-Produktion</h1>
-                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle. Wir zeigen die wichtigsten Stationen der Herstellung. Transparent - kompakt - und praxisnah.</p>
+                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle. Wir zeigen die wichtigsten Stationen der Herstellung. Transparent - kompakt - praxisnah.</p>
             </div>
         </section>
 
@@ -152,7 +152,7 @@
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 2</div>
                                         <h3 class="process-slide__title">Papiermühle</h3>
-                                        <p class="process-slide__text">Die Fasersuspension wird auf ein Sieb aufgespritzt. Wasser läuft ab – eine feuchte Papierbahn entsteht.</p>
+                                        <p class="process-slide__text">Die Fasersuspension wird auf ein Sieb aufgespritzt. Das Wasser läuft ab und eine feuchte Papierbahn entsteht.</p>
                                     </div>
                                 </article>
                                 <article class="process-slide">
@@ -160,7 +160,7 @@
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 3</div>
                                         <h3 class="process-slide__title">Trocknung</h3>
-                                        <p class="process-slide__text">Die Papierbahn läuft über einen heißen Trockenzylinder. Das restliche Wasser wird entfernt.</p>
+                                        <p class="process-slide__text">Die Papierbahn läuft über einen heißen Trockenzylinder. Das restliche Wasser verdampft durch die Hitze.</p>
                                     </div>
                                 </article>
                                 <article class="process-slide">
@@ -208,7 +208,7 @@
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 9</div>
                                         <h3 class="process-slide__title">Umverpackung</h3>
-                                        <p class="process-slide__text">Die 8er-Packs werden zu größeren Verpackungseinheiten zusammengefasst.</p>
+                                        <p class="process-slide__text">Die einzelenen Rollen werden in der Verpackungsmaschiene in Folie verpackt. Fertig ist das 8er Pack Toilettenpapier.</p>
                                     </div>
                                 </article>
                                 <article class="process-slide">
@@ -243,7 +243,7 @@
                 <div class="shop__header">
                     <p class="shop__eyebrow">Online Shop</p>
                     <h2>Produktion gesehen? Gleich im Shop bestellen!</h2>
-                    <p class="shop__lead">Im Hamburgpapier Online Shop finden Sie sofort lieferbare Ware - ideal f&uuml;r den t&auml;glichen Bedarf im Betrieb.</p>
+                    <p class="shop__lead">Im Hamburgpapier Online Shop finden Sie sofort lieferbare Ware ideal f&uuml;r den t&auml;glichen Bedarf im Betrieb.</p>
                 </div>
 
                 <div class="shop-grid shop-grid--highlights">
