--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="de">
 <head>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a7e6e019-659c-4f11-b7f6-534e673ff918" type="text/javascript" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburgpapier - Hygienepapier Produktion &amp; Prozess-Insights</title>
@@ -479,7 +480,6 @@
 
 </body>
 </html>
-
 
 
 
