--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="de">
 <head>
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a7e6e019-659c-4f11-b7f6-534e673ff918" type="text/javascript" async></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8CL3HZMGK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-H8CL3HZMGK');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburgpapier - Hygienepapier Produktion &amp; Prozess-Insights</title>
@@ -480,7 +489,6 @@
 
 </body>
 </html>
-
 
 
 
