--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <meta name="twitter:title" content="Hamburgpapier – Hygienepapier Produktion &amp; Prozess-Insights">
     <meta name="twitter:description" content="Erleben Sie die Produktion von Hygienepapier bei Hamburgpapier: Vom Zellstoff zur fertigen Rolle, mit Videos zu Papiermaschine, Trocknung, Schneiden, Verpacken und Versand.">
     <meta name="twitter:image" content="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606">
-    <link rel="preload" as="video" href="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" type="video/mp4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/png" sizes="32x32" href="Assents/favicon-hamburgpapier.png">
@@ -257,49 +256,101 @@
                 </div>
 
                 <div class="shop-grid shop-grid--highlights">
-                    <article class="shop-card" style="--card-accent: var(--success)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
-                            <img class="shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandtücher" loading="lazy" decoding="async" width="800" height="800">
+                    <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/papierhandtuecher" style="--card-accent: var(--success)">
+                        <img class="card-image shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandtücher" loading="lazy" decoding="async" width="800" height="800">
+                        <div class="card-transition-block" aria-hidden="true"></div>
+                        <div class="card-content">
+                            <div class="card-content-title">
+                                <h3 class="shop-card__title display-s">Papierhandtücher</h3>
+                                <h3 class="shop-card__title display-s display-s-absolute" aria-hidden="true">Papierhandtücher</h3>
+                            </div>
+                            <p class="shop-card__desc sr-only">Weiche, saugfähige Tücher für Waschräume und Gäste-WCs. Helle Qualitäten, hygienisch verpackt.</p>
+                            <span class="shop-card__cta sr-only">Jetzt ansehen</span>
                         </div>
-                        <div class="shop-card__body">
-                            <h3 class="shop-card__title">Papierhandtücher</h3>
-                            <p class="shop-card__desc">Weiche, saugfähige Tücher für Waschräume und Gäste-WCs. Helle Qualitäten, hygienisch verpackt.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/papierhandtuecher">Jetzt ansehen</a>
+                        <div class="card-button-wrapper" aria-hidden="true">
+                            <div class="card-button">
+                                <div class="card-icon-outer-wrapper">
+                                    <div class="card-icon-wrapper">
+                                        <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                        <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </article>
+                        <img class="card-transition-image" src="Assents/papierhandtuecher_800x800.avif" alt="" loading="lazy" decoding="async" width="800" height="800" aria-hidden="true">
+                    </a>
 
-                    <article class="shop-card" style="--card-accent: var(--success)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
-                            <img class="shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="Küchenrollen" loading="lazy" decoding="async" width="800" height="800">
+                    <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/toilettenpapier" style="--card-accent: var(--success)">
+                        <img class="card-image shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="Küchenrollen" loading="lazy" decoding="async" width="800" height="800">
+                        <div class="card-transition-block" aria-hidden="true"></div>
+                        <div class="card-content">
+                            <div class="card-content-title">
+                                <h3 class="shop-card__title display-s">Küchenrollen</h3>
+                                <h3 class="shop-card__title display-s display-s-absolute" aria-hidden="true">Küchenrollen</h3>
+                            </div>
+                            <p class="shop-card__desc sr-only">Fettaufnehmend und reißfest, 2-3-lagig. Ideal für Gastronomie und Catering.</p>
+                            <span class="shop-card__cta sr-only">Jetzt ansehen</span>
                         </div>
-                        <div class="shop-card__body">
-                            <h3 class="shop-card__title">Küchenrollen</h3>
-                            <p class="shop-card__desc">Fettaufnehmend und reißfest, 2-3-lagig. Ideal für Gastronomie und Catering.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/toilettenpapier">Jetzt ansehen</a>
+                        <div class="card-button-wrapper" aria-hidden="true">
+                            <div class="card-button">
+                                <div class="card-icon-outer-wrapper">
+                                    <div class="card-icon-wrapper">
+                                        <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                        <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </article>
+                        <img class="card-transition-image" src="Assents/kuechenrollen_800x800.avif" alt="" loading="lazy" decoding="async" width="800" height="800" aria-hidden="true">
+                    </a>
 
-                    <article class="shop-card" style="--card-accent: var(--success)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
-                            <img class="shop-card__img" src="Assents/handtuchrollen_800x800.avif" alt="Handtuchrollen" loading="lazy" decoding="async" width="800" height="800">
+                    <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/handtuchrollen" style="--card-accent: var(--success)">
+                        <img class="card-image shop-card__img" src="Assents/handtuchrollen_800x800.avif" alt="Handtuchrollen" loading="lazy" decoding="async" width="800" height="800">
+                        <div class="card-transition-block" aria-hidden="true"></div>
+                        <div class="card-content">
+                            <div class="card-content-title">
+                                <h3 class="shop-card__title display-s">Handtuchrollen</h3>
+                                <h3 class="shop-card__title display-s display-s-absolute" aria-hidden="true">Handtuchrollen</h3>
+                            </div>
+                            <p class="shop-card__desc sr-only">Innen- und außenabrollende Rollen, saugfähig und sparsam im Verbrauch, passend zu Tork und Co.</p>
+                            <span class="shop-card__cta sr-only">Jetzt ansehen</span>
                         </div>
-                        <div class="shop-card__body">
-                            <h3 class="shop-card__title">Handtuchrollen</h3>
-                            <p class="shop-card__desc">Innen- und außenabrollende Rollen, saugfähig und sparsam im Verbrauch, passend zu Tork und Co.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/handtuchrollen">Jetzt ansehen</a>
+                        <div class="card-button-wrapper" aria-hidden="true">
+                            <div class="card-button">
+                                <div class="card-icon-outer-wrapper">
+                                    <div class="card-icon-wrapper">
+                                        <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                        <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </article>
+                        <img class="card-transition-image" src="Assents/handtuchrollen_800x800.avif" alt="" loading="lazy" decoding="async" width="800" height="800" aria-hidden="true">
+                    </a>
 
-                    <article class="shop-card" style="--card-accent: var(--success)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
-                            <img class="shop-card__img" src="Assents/putzpapier-blau_800x800.avif" alt="Putzpapier" loading="lazy" decoding="async" width="800" height="800">
+                    <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/putzpapier-putzpapierrollen-blau" style="--card-accent: var(--success)">
+                        <img class="card-image shop-card__img" src="Assents/putzpapier-blau_800x800.avif" alt="Putzpapier" loading="lazy" decoding="async" width="800" height="800">
+                        <div class="card-transition-block" aria-hidden="true"></div>
+                        <div class="card-content">
+                            <div class="card-content-title">
+                                <h3 class="shop-card__title display-s">Putzpapier</h3>
+                                <h3 class="shop-card__title display-s display-s-absolute" aria-hidden="true">Putzpapier</h3>
+                            </div>
+                            <p class="shop-card__desc sr-only">Reißfest, nassstabil und staubarm für Maschinenparks, Produktion und Reinigungsteams.</p>
+                            <span class="shop-card__cta sr-only">Jetzt ansehen</span>
                         </div>
-                        <div class="shop-card__body">
-                            <h3 class="shop-card__title">Putzpapier</h3>
-                            <p class="shop-card__desc">Reißfest, nassstabil und staubarm für Maschinenparks, Produktion und Reinigungsteams.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/putzpapier-putzpapierrollen-blau">Jetzt ansehen</a>
+                        <div class="card-button-wrapper" aria-hidden="true">
+                            <div class="card-button">
+                                <div class="card-icon-outer-wrapper">
+                                    <div class="card-icon-wrapper">
+                                        <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                        <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </article>
+                        <img class="card-transition-image" src="Assents/putzpapier-blau_800x800.avif" alt="" loading="lazy" decoding="async" width="800" height="800" aria-hidden="true">
+                    </a>
                 </div>
 
                 <div class="shop__offers">
