--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div id="smooth-scroll">
     <main>
         <section class="hero" id="hero">
-            <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
+            <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" data-hero-videos="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857|Assents/Papierhantuecher-in-der-Produktion.mp4|Assents/umverpackung-in-8-er-verpackungen.mp4" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
             <div class="hero__content">
                 <h1 class="hero-title">Hygienepapier-Produktion</h1>
                 <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle. Wir zeigen die wichtigsten Stationen der Herstellung. Transparent - kompakt - praxisnah.</p>
@@ -181,7 +181,7 @@
                                     </div>
                                 </article>
                                 <article class="process-slide">
-                                    <video class="process-slide__image process-slide__video" poster="Assents/6-poster.jpg" src="Assents/qualitaetskontrolle-mit-scanner..mp4" muted loop playsinline preload="auto"></video>
+                                    <video class="process-slide__image process-slide__video" src="Assents/qualitaetskontrolle-mit-scanner..mp4" muted loop playsinline preload="auto" data-prime-frame="true"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 5</div>
                                         <h3 class="process-slide__title">Qualitätskontrolle</h3>
@@ -197,7 +197,7 @@
                                     </div>
                                 </article>
                                 <article class="process-slide">
-                                    <video class="process-slide__image process-slide__video" poster="Assents/7-poster.jpg" src="Assents/wicklen-logs-saege-schneiden..mp4" muted loop playsinline preload="auto"></video>
+                                    <video class="process-slide__image process-slide__video" src="Assents/wicklen-logs-saege-schneiden..mp4" muted loop playsinline preload="auto" data-prime-frame="true"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 7</div>
                                         <h3 class="process-slide__title">Wickeln &amp; Schneiden</h3>
@@ -205,7 +205,7 @@
                                     </div>
                                 </article>
                                 <article class="process-slide">
-                                    <video class="process-slide__image process-slide__video" src="Assents/weiterverarbeitung-in-verpackungsmaschine.mp4" muted loop playsinline preload="auto"></video>
+                                    <video class="process-slide__image process-slide__video" src="Assents/weiterverarbeitung-in-verpackungsmaschine.mp4" muted loop playsinline preload="auto" data-prime-frame="true"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 8</div>
                                         <h3 class="process-slide__title">Weiterverarbeitung</h3>
@@ -273,7 +273,7 @@
 
                                 <div class="scroll-h-child flex-cc two">
                                     <div class="shop-card-stack">
-                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/papierhandtuecher" style="--card-accent: var(--success)">
+                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/papierhandtuecher" data-category="Papierhandt&uuml;cher" style="--card-accent: var(--success)">
                                             <img class="card-image shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandtücher" loading="lazy" decoding="async" width="800" height="800">
                                             <div class="card-transition-block" aria-hidden="true"></div>
                                             <div class="card-content">
@@ -283,16 +283,6 @@
                                                 </div>
                                                 <p class="shop-card__desc sr-only">Weiche, saugfähige Tücher für Waschräume und Gäste-WCs. Helle Qualitäten, hygienisch verpackt.</p>
                                                 <span class="shop-card__cta sr-only">Jetzt ansehen</span>
-                                            </div>
-                                            <div class="card-button-wrapper" aria-hidden="true">
-                                                <div class="card-button">
-                                                    <div class="card-icon-outer-wrapper">
-                                                        <div class="card-icon-wrapper">
-                                                            <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                            <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
@@ -305,7 +295,7 @@
 
                                 <div class="scroll-h-child flex-cc three">
                                     <div class="shop-card-stack">
-                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/toilettenpapier" style="--card-accent: var(--success)">
+                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/toilettenpapier" data-category="K&uuml;chenrollen" style="--card-accent: var(--success)">
                                             <img class="card-image shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="Küchenrollen" loading="lazy" decoding="async" width="800" height="800">
                                             <div class="card-transition-block" aria-hidden="true"></div>
                                             <div class="card-content">
@@ -315,16 +305,6 @@
                                                 </div>
                                                 <p class="shop-card__desc sr-only">Fettaufnehmend und reißfest, 2-3-lagig. Ideal für Gastronomie und Catering.</p>
                                                 <span class="shop-card__cta sr-only">Jetzt ansehen</span>
-                                            </div>
-                                            <div class="card-button-wrapper" aria-hidden="true">
-                                                <div class="card-button">
-                                                    <div class="card-icon-outer-wrapper">
-                                                        <div class="card-icon-wrapper">
-                                                            <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                            <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
@@ -337,7 +317,7 @@
 
                                 <div class="scroll-h-child flex-cc four">
                                     <div class="shop-card-stack">
-                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/handtuchrollen" style="--card-accent: var(--success)">
+                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/handtuchrollen" data-category="Handtuchrollen" style="--card-accent: var(--success)">
                                             <img class="card-image shop-card__img" src="Assents/handtuchrollen_800x800.avif" alt="Handtuchrollen" loading="lazy" decoding="async" width="800" height="800">
                                             <div class="card-transition-block" aria-hidden="true"></div>
                                             <div class="card-content">
@@ -347,16 +327,6 @@
                                                 </div>
                                                 <p class="shop-card__desc sr-only">Innen- und außenabrollende Rollen, saugfähig und sparsam im Verbrauch, passend zu Tork und Co.</p>
                                                 <span class="shop-card__cta sr-only">Jetzt ansehen</span>
-                                            </div>
-                                            <div class="card-button-wrapper" aria-hidden="true">
-                                                <div class="card-button">
-                                                    <div class="card-icon-outer-wrapper">
-                                                        <div class="card-icon-wrapper">
-                                                            <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                            <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
@@ -369,7 +339,7 @@
 
                                 <div class="scroll-h-child flex-cc five">
                                     <div class="shop-card-stack">
-                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/putzpapier-putzpapierrollen-blau" style="--card-accent: var(--success)">
+                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/putzpapier-putzpapierrollen-blau" data-category="Putzpapier" style="--card-accent: var(--success)">
                                             <img class="card-image shop-card__img" src="Assents/putzpapier-blau_800x800.avif" alt="Putzpapier" loading="lazy" decoding="async" width="800" height="800">
                                             <div class="card-transition-block" aria-hidden="true"></div>
                                             <div class="card-content">
@@ -379,16 +349,6 @@
                                                 </div>
                                                 <p class="shop-card__desc sr-only">Reißfest, nassstabil und staubarm für Maschinenparks, Produktion und Reinigungsteams.</p>
                                                 <span class="shop-card__cta sr-only">Jetzt ansehen</span>
-                                            </div>
-                                            <div class="card-button-wrapper" aria-hidden="true">
-                                                <div class="card-button">
-                                                    <div class="card-icon-outer-wrapper">
-                                                        <div class="card-icon-wrapper">
-                                                            <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                            <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
@@ -401,7 +361,7 @@
 
                                 <div class="scroll-h-child flex-cc six">
                                     <div class="shop-card-stack">
-                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/toilettenpapier" style="--card-accent: var(--success)">
+                                        <a class="shop-card" href="https://sw6.hamburgpapier-shop.de/toilettenpapier" data-category="Toilettenpapier" style="--card-accent: var(--success)">
                                             <img class="card-image shop-card__img" src="Assents/toilettenpapier_800x800.avif" alt="Toilettenpapier" loading="lazy" decoding="async" width="800" height="800">
                                             <div class="card-transition-block" aria-hidden="true"></div>
                                             <div class="card-content">
@@ -411,16 +371,6 @@
                                                 </div>
                                                 <p class="shop-card__desc sr-only">Weich, saugfaehig und robust im Alltag. Ideal fuer Sanitaerbereiche, Buero und Gastronomie.</p>
                                                 <span class="shop-card__cta sr-only">Jetzt ansehen</span>
-                                            </div>
-                                            <div class="card-button-wrapper" aria-hidden="true">
-                                                <div class="card-button">
-                                                    <div class="card-icon-outer-wrapper">
-                                                        <div class="card-icon-wrapper">
-                                                            <svg class="card-icon" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                            <svg class="card-icon card-icon-absolute" viewBox="0 0 16 16" aria-hidden="true" focusable="false"><path d="M4 12L12 4M6 4H12V10" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
