--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a7e6e019-659c-4f11-b7f6-534e673ff918" type="text/javascript" async></script>
@@ -253,7 +253,7 @@
                         <div class="sticky-child page-padding">
                             <div class="shop-intro">
                                 <div class="div-hide">
-                                    <h2 class="heading-small intro">Produktion Gesehen? Gleich im Shop Bestellen!</h2>
+                                    <h2 class="heading-small intro">Produktion gesehen?<br>Gleich im Shop bestellen!</h2>
                                 </div>
                                 <div class="spacer-small"></div>
                                 <div class="spacer-small"></div>
@@ -286,9 +286,15 @@
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
-                                            <li><strong>Preis ab</strong> 12,13 € brutto (bis 31,57 €)</li>
-                                            <li>1-3-lagig, Recycling/Zellstoff, EU Ecolabel/Blauer Engel</li>
-                                            <li>Karton ab 2-3 Kartons, Palette ab 32-54 Kartons, versandkostenfrei</li>
+                                            <li class="shop-card__meta-row">
+                                                <a class="shop-card__meta-link" href="https://hamburgpapier-shop.de/papierhandtuecher-1-lagig-grau-ecoline-palette">Zum Angebot</a>
+                                                <span><strong>Preis ab</strong> 10,19&nbsp;&euro; f&uuml;r 4000 St&uuml;ck</span>
+                                            </li>
+                                            <li>Papierhandt&uuml;cher mit 1&ndash;3 Lagen</li>
+                                            <li>Recycling- oder Zellstoffmaterial</li>
+                                            <li>Umweltzeichen EU Ecolabel</li>
+                                            <li>Karton- oder Palettenversand</li>
+                                            <li>Versandkostenfrei</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -308,9 +314,15 @@
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
-                                            <li><strong>Preis ab</strong> 17,15 € brutto (bis 24,86 €)</li>
-                                            <li>2-3-lagig Zellstoff, EU Ecolabel, 64-400 Blatt</li>
-                                            <li>Karton ab 2-3 VE, Palette ab 24-36 VE, versandkostenfrei</li>
+                                            <li class="shop-card__meta-row">
+                                                <a class="shop-card__meta-link" href="https://hamburgpapier-shop.de/kuechenrollen-3-lagig-ecoline-768-rollen">Zum Angebot</a>
+                                                <span><strong>Preis ab</strong> 15,26&nbsp;&euro; f&uuml;r 32 Rollen</span>
+                                            </li>
+                                            <li>K&uuml;chenrollen mit 2&ndash;3 Lagen</li>
+                                            <li>Aus Zellstoffmaterial</li>
+                                            <li>Umweltzeichen EU Ecolabel</li>
+                                            <li>Karton- oder Palettenversand</li>
+                                            <li>Versandkostenfrei</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -330,9 +342,15 @@
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
-                                            <li><strong>Preis ab</strong> 14,97 € brutto (bis 107,10 € inkl. Starterset)</li>
-                                            <li>1-3-lagig, 100-300 m, Innen-/Außenabwicklung</li>
-                                            <li>Karton ab 12 Rollen, Palette ab 216-300 Rollen, versandkostenfrei</li>
+                                            <li class="shop-card__meta-row">
+                                                <a class="shop-card__meta-link" href="https://hamburgpapier-shop.de/handtuchrollen-2-lagig-zellstoff-palettenversand">Zum Angebot</a>
+                                                <span><strong>Preis ab</strong> 15,56&nbsp;&euro; f&uuml;r 6 Rollen</span>
+                                            </li>
+                                            <li>Handtuchrollen mit 1&ndash;3 Lagen</li>
+                                            <li>Aus Zellstoffmaterial und Recycling</li>
+                                            <li>Umweltzeichen EU Ecolabel</li>
+                                            <li>Karton- oder Palettenversand</li>
+                                            <li>Versandkostenfrei</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -352,9 +370,15 @@
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
-                                            <li><strong>Preis ab</strong> 13,26 € brutto (bis 28,06 €)</li>
-                                            <li>2-3-lagig, Recycling/Zellstoff, 1000-1500 Abrisse</li>
-                                            <li>Karton ab 2 Rollen/VE, Palette ab 35-60 Rollen, versandkostenfrei</li>
+                                            <li class="shop-card__meta-row">
+                                                <a class="shop-card__meta-link" href="https://hamburgpapier-shop.de/putzpapier-blau-3-lagig-zellstoff-fachhandel">Zum Angebot</a>
+                                                <span><strong>Preis ab</strong> 15,84&nbsp;&euro; f&uuml;r 1 Rolle mit 1000 Blatt</span>
+                                            </li>
+                                            <li>Putzpapier mit 2&ndash;3 Lagen</li>
+                                            <li>Aus Zellstoffmaterial und Recycling</li>
+                                            <li>Umweltzeichen EU Ecolabel</li>
+                                            <li>Karton- oder Palettenversand</li>
+                                            <li>Versandkostenfrei</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -374,9 +398,15 @@
                                             </div>
                                         </a>
                                         <ul class="shop-card__meta">
-                                            <li><strong>Preis ab</strong> 13,24 € brutto (bis 45,29 €)</li>
-                                            <li>1-4-lagig, Recycling/Zellstoff, EU Ecolabel</li>
-                                            <li>Karton ab 1 Karton/2-4 VE, Palette ab 18-49 VE, versandkostenfrei</li>
+                                            <li class="shop-card__meta-row">
+                                                <a class="shop-card__meta-link" href="https://hamburgpapier-shop.de/toilettenpapier">Zum Angebot</a>
+                                                <span><strong>Preis ab</strong> 14,05&nbsp;&euro; f&uuml;r 64 Rollen mit 150 Blatt</span>
+                                            </li>
+                                            <li>Toilettenpapier mit 2&ndash;4 Lagen</li>
+                                            <li>Aus Zellstoffmaterial und Recycling</li>
+                                            <li>Umweltzeichen EU Ecolabel</li>
+                                            <li>Karton- oder Palettenversand</li>
+                                            <li>Versandkostenfrei</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -573,6 +603,9 @@
 
 </body>
 </html>
+
+
+
 
 
 
