--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
       gtag('config', 'G-H8CL3HZMGK');
     </script>
+    <script type="text/javascript">
+      window.smartlook||(function(d) {
+        var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+        var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+        c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+        })(document);
+        smartlook('init', '9459166329ba092fc109db0857145cc6f0882c8d', { region: 'eu' });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburgpapier - Hygienepapier Produktion &amp; Prozess-Insights</title>
